<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.VacationDetails">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="412dp"
        android:layout_height="360dp"
        android:contentDescription="@string/scrollable_view_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:text="@string/vacation_title"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="87dp"
                    tools:layout_editor_absoluteY="319dp" />

                <EditText
                    android:id="@+id/title_text_input"
                    android:layout_width="295dp"
                    android:layout_height="70dp"
                    android:autofillHints="Add a title here."
                    android:hint="@string/add_a_title_here"
                    android:inputType="text"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:text="@string/vacation_hotel"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="79dp"
                    tools:layout_editor_absoluteY="392dp" />

                <EditText
                    android:id="@+id/hotel_text_input"
                    android:layout_width="295dp"
                    android:layout_height="70dp"
                    android:autofillHints="Add a hotel here."
                    android:hint="@string/add_a_hotel_here"
                    android:inputType="text"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:paddingVertical="5dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:paddingVertical="12dp"
                    android:text="@string/vacation_start_date"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="87dp"
                    tools:layout_editor_absoluteY="319dp" />

                <TextView
                    android:id="@+id/start_text_input"
                    android:layout_width="295dp"
                    android:layout_height="70dp"
                    android:autofillHints="Select a start date."
                    android:hint="@string/select_a_start_date"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:paddingVertical="12dp"
                    android:text="@string/hotel_end_date"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="79dp"
                    tools:layout_editor_absoluteY="392dp" />

                <TextView
                    android:id="@+id/end_text_input"
                    android:layout_width="295dp"
                    android:layout_height="70dp"
                    android:autofillHints="Select an end date."
                    android:hint="@string/select_an_end_date"
                    android:inputType="text"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/excursionRecyclerView"
        android:layout_width="412dp"
        android:layout_height="272dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/add_an_excursion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="22dp"
        android:text="@string/excursion"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/excursionRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="22dp"
        android:text="@string/date"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/excursionRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />


</androidx.constraintlayout.widget.ConstraintLayout>