<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.ExcursionDetails">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="413dp"
        android:layout_height="582dp"
        android:contentDescription="@string/scrollable_excursion_details_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:text="@string/excursion_title"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="87dp"
                    tools:layout_editor_absoluteY="319dp" />

                <EditText
                    android:id="@+id/excursion_title_text_input"
                    android:layout_width="295dp"
                    android:layout_height="70dp"
                    android:autofillHints="Add a title here."
                    android:hint="@string/add_an_excursion_title"
                    android:inputType="text"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:paddingVertical="12dp"
                    android:text="@string/add_a_date"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="87dp"
                    tools:layout_editor_absoluteY="319dp" />

                <TextView
                    android:id="@+id/excursion_date"
                    android:layout_width="295dp"
                    android:layout_height="70dp"
                    android:autofillHints="Select a start date."
                    android:hint="@string/select_a_date"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:textSize="15sp"
                android:text="@string/select_an_associated_vacation_below" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:spinnerMode="dialog"
                android:autofillHints="choose a vacation"/>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>